--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ __pycache__/
 
 # C extensions
 *.so
-
+.gitignore
 # Distribution / packaging
 .Python
 build/
@@ -81,7 +81,7 @@ target/
 # IPython
 profile_default/
 ipython_config.py
-
+secrets/
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
 #   intended to run in multiple environments; otherwise, check them in:
